# i3-gnome-pomodoro

./: .gitignore  README.md  pomodoro-client.py  pyproject.toml  requirements.txt
i3_gnome_pomodoro/: pomodoro_client.py
